--- a/TraceIt/Views/Charts/LevelsChartsPage.xaml
+++ b/TraceIt/Views/Charts/LevelsChartsPage.xaml
@@ -13,7 +13,7 @@
 
     <ContentView.Resources>
         <ResourceDictionary>
-            
+
             <Style TargetType="progressbar:SfLinearProgressBar" x:Key="baseProgressBar">
                 <Setter Property="Minimum" Value="0"/>
                 <Setter Property="HeightRequest" Value="{Binding Source={RelativeSource Self}, Path=TrackHeight}"/>
@@ -26,6 +26,7 @@
                 <Setter Property="TrackHeight" Value="70"/>
                 <Setter Property="Progress" Value="{Binding AchievedCredits}"/>
                 <Setter Property="ProgressColor" Value="Orange"/>
+                <Setter Property="SegmentCount" Value="{OnIdiom Phone=40}"/>
             </Style>
 
             <Style TargetType="progressbar:SfLinearProgressBar" x:Key="extraProgressBar"
@@ -43,45 +44,49 @@
 
         </ResourceDictionary>
     </ContentView.Resources>
-    
+
     <ContentView.Content>
-        <StackLayout>
-            <Grid ColumnDefinitions="*, *" RowDefinitions="20, *" Padding="40, 10">
+        <ScrollView>
+            <StackLayout>
+                <Grid ColumnDefinitions="*, *" RowDefinitions="20, *" Padding="{OnIdiom Phone='20, 10', Tablet='40, 10'}">
 
-                <Label Text="Literacy progress" FontAttributes="Bold" Grid.Column="0"
+                    <Label Text="Literacy progress" FontAttributes="Bold" Grid.Column="0"
                        TextColor="White"/>
-                <Frame Style="{StaticResource progressBarFrame}" Grid.Column="0" Grid.Row="1">
-                    <progressbar:SfLinearProgressBar Progress="{Binding LiteracyCredits}" Style="{StaticResource extraProgressBar}"
+                    <Frame Style="{StaticResource progressBarFrame}" Grid.Column="0" Grid.Row="1">
+                        <progressbar:SfLinearProgressBar Progress="{Binding LiteracyCredits}" Style="{StaticResource extraProgressBar}"
                                                      Maximum="5"/>
-                </Frame>
+                    </Frame>
 
-                <Label Text="Numeracy progress" FontAttributes="Bold" Grid.Column="1"
+                    <Label Text="Numeracy progress" FontAttributes="Bold" Grid.Column="1"
                        TextColor="White"/>
-                <Frame Style="{StaticResource progressBarFrame}" Grid.Column="1" Grid.Row="1">
-                    <progressbar:SfLinearProgressBar Progress="{Binding NumeracyCredits}" Style="{StaticResource extraProgressBar}"
+                    <Frame Style="{StaticResource progressBarFrame}" Grid.Column="1" Grid.Row="1">
+                        <progressbar:SfLinearProgressBar Progress="{Binding NumeracyCredits}" Style="{StaticResource extraProgressBar}"
                                                      Maximum="5"/>
-                </Frame>
-            </Grid>
-            
-            <listview:SfListView ItemsSource="{Binding Levels}" AutoFitMode="Height"
-                                 ItemSpacing="20" Padding="20, 0">
-                <listview:SfListView.ItemTemplate>
-                    <DataTemplate>
-                        <StackLayout>
-                            <Label Text="{Binding SelectedLevel, StringFormat='Progress for Level {0}'}"
+                    </Frame>
+                </Grid>
+
+                <listview:SfListView ItemsSource="{Binding Levels}" AutoFitMode="Height"
+                                 ItemSpacing="0, 20" Padding="{OnIdiom Phone='10, 0', Tablet='20, 0'}" 
+                                 IsScrollingEnabled="False" VerticalOptions="FillAndExpand"
+                                 Margin="0">
+                    <listview:SfListView.ItemTemplate>
+                        <DataTemplate>
+                            <StackLayout>
+                                <Label Text="{Binding SelectedLevel, StringFormat='Progress for Level {0}'}"
                                    TextColor="White" FontAttributes="Bold"/>
-                            <Label Text="{Binding AchievedCredits, StringFormat='{0} / 80 credits'}"
+                                <Label Text="{Binding AchievedCredits, StringFormat='{0} / 80 credits'}"
                                    TextColor="White" FontAttributes="Italic"/>
-                            <Frame Style="{StaticResource progressBarFrame}">
-                                <progressbar:SfLinearProgressBar Style="{StaticResource levelProgressBar}" 
+                                <Frame Style="{StaticResource progressBarFrame}">
+                                    <progressbar:SfLinearProgressBar Style="{StaticResource levelProgressBar}" 
                                                              Maximum="{Binding RequiredCredits}"
                                                              VerticalOptions="FillAndExpand"
                                                              HorizontalOptions="FillAndExpand"/>
-                            </Frame>
-                        </StackLayout>
-                    </DataTemplate>
-                </listview:SfListView.ItemTemplate>
-            </listview:SfListView>
-        </StackLayout>
+                                </Frame>
+                            </StackLayout>
+                        </DataTemplate>
+                    </listview:SfListView.ItemTemplate>
+                </listview:SfListView>
+            </StackLayout>
+        </ScrollView>
     </ContentView.Content>
 </ContentView>
